picturestyle.css
/* ... */
    a:hover {
        color: rgb(238, 238, 238, 1);
        text-decoration: underline solid rgb(255, 98, 111, 1) 0.15em;
        text-underline-offset: 0.4em;
    }

    #current_page:hover{
        color: rgb(238, 238, 238);
    }



/* INDEX PAGE CSS */

    /* Full height splashcreen */

        .bg {
            display: flex;
            flex-direction: column;
            
            /*https://larsenwork.com/easing-gradients/*/
            background:        
                linear-gradient(to bottom,
                hsla(0, 0%, 0%, 0.45) 0%,
                hsla(0, 0%, 0%, 0.388) 5.3%,
                hsla(0, 0%, 0%, 0.331) 10.9%,
                hsla(0, 0%, 0%, 0.279) 16.6%,
                hsla(0, 0%, 0%, 0.232) 22.6%,
                hsla(0, 0%, 0%, 0.189) 28.8%,
                hsla(0, 0%, 0%, 0.152) 35.2%,
                hsla(0, 0%, 0%, 0.118) 41.8%,
                hsla(0, 0%, 0%, 0.09) 48.5%,
                hsla(0, 0%, 0%, 0.065) 55.4%,
                hsla(0, 0%, 0%, 0.045) 62.5%,
                hsla(0, 0%, 0%, 0.028) 69.7%,
                hsla(0, 0%, 0%, 0.016) 77.1%,
                hsla(0, 0%, 0%, 0.007) 84.6%,
                hsla(0, 0%, 0%, 0.002) 92.3%,
                hsla(0, 0%, 0%, 0) 100%), url(IMG/IMG_4573.JPG);
                
            /*background: linear-gradient(0deg, rgb(255, 255, 255, 0.0) 10%, rgba(0, 0, 0, 0.15) 100%), url(IMG/backgroundsplash.jpg);*/

            background-position: center;
            background-repeat: no-repeat;
            background-size: cover;
            
            min-height: 100%;
            width: 100%;
            
            top: 0;
            right: 0;
            bottom: 0;
            left: 0;
            z-index: 0;
            overflow: hidden;

            justify-content: center;
            align-items: center;

            
        }

            .welcomemessage {
                width: 70%;
                text-align: center;
                color: white;
                font-weight: 100;
                font-style: italic;
                font-size: 3.5em;
            }

            .button {
                height: 50px;
                width: 150px;
                border: none;
                text-align: center;
                text-decoration: none;
                background-color: white;
                transition-duration: 0.5s;

                font-size: 0.85em;
                font-family: "Roboto", sans-serif;
                letter-spacing: 0.08em;
                
            }

            .button:hover {
                background-color: rgba(255, 255, 255, 0.7);
                color: rgba(53, 53, 53, 0.6);
        }

    /* About Section */

        .section1 {     
            width: 100%;
            background-color: rgb(255, 255, 255);
            
        }

            .section1_content {
                display: flex;
                flex-direction: column;
                align-items: center;
                justify-content: center;
                height: 100%;
                width: 90%;
                margin: auto;
                
            }

            .section1_header {
                width: 90%;
                font-size: 1.2em;
                text-align: left;
                margin-top: 20px;
            }

            .section1_header h1 {
                font-weight: 100;
            }

            .section1_row {
                display: flex;
                flex-direction: row;
                align-items: center;
                height: 100%;
            }


            .picture {
                float: left;
                padding: 20px;
                padding-top: 0px;
                padding-bottom: 40px;
            }

            .section1_content p {
                padding: 0px 20px;
                
            }

            @media screen and (viewport-width:750px) {
                .section1_row {
                    flex-direction: column;
                }
            }
            @media screen and (max-width:750px) {
                .section1_row {
                    flex-direction: column;
                }
            }

    /* Featured Articles Section */

        .section2 {
            width: 100%;
            background-color: rgb(255, 98, 111, 1) ;
            
        }

            .section2_content {
                display: flex;
                flex-direction: column;
                color: white;
                width: 90%;
                height: 100%;
                margin: auto;
            }

            .section2_header {
                font-size: 1.2em;
                text-align: left;
                margin-left: 50px;
                margin-top: 20px;
            }

            .section2_header h1 {
                font-weight: 100;
            }

            .section2_links {
                display: flex;
                flex-direction: row;
                flex-wrap: wrap;
                justify-content: center;
                align-items: flex-start;
                height: 100%;
                width: 100%;
                margin: auto;
                margin-bottom: 25px;
                margin-top: 0px;
            }

            .section2_link {
                display: flex;
                flex-direction: column;
                width: 26vw;
                margin: 0.9vw;
                margin-bottom: 0px;
                padding-bottom: 0px;
                color: white;
                text-align: center;
                padding: 0.5vw;
            }

            .section2_link img {
                width: 24vw;
                height: 24vw;
                box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
                transition: box-shadow 0.4s;
            }

            .section2_link img:hover {
                box-shadow: rgba(0, 0, 0, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
            }
/* ... */

